RESOLVED FIXED270117
[UnifiedPDF] Button tracking stops working when the mouse leaves the button
https://bugs.webkit.org/show_bug.cgi?id=270117
Summary [UnifiedPDF] Button tracking stops working when the mouse leaves the button
Sammy Gill
Reported 2024-02-26 13:46:08 PST
Load a PDF, and mouse down on a checkbox. It shows the gray highlight. Then drag the mouse off the checkbox; the highlight disappears. Then drag back over it; the highlight should re-appear, but does not.
Attachments
Sammy Gill
Comment 1 2024-02-26 13:46:28 PST
Sammy Gill
Comment 2 2024-02-26 13:59:34 PST
EWS
Comment 3 2024-02-26 20:16:38 PST
Committed 275362@main (e5936dcccb93): <https://commits.webkit.org/275362@main> Reviewed commits have been landed. Closing PR #25132 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.